welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
while (danse=1) {
            ^BDRBuggle:4: error: not found: value R
	if (litMessage()==R) {
                          ^BDRBuggle:8: error: not found: value L
	else if (litMessage==L) {
                             ^BDRBuggle:12: error: not found: value I
	else if (litMessage==I) {
                             ^BDRBuggle:17: error: not found: value A
	else if (litMessage==A)
                             ^BDRBuggle:19: error: not found: value B
	else if (litMessage==B) {
                             ^BDRBuggle:23: error: not found: value C
	else if (litMessage==C) {
                             ^BDRBuggle:28: error: not found: value Z
	else if (litMessage==Z)
                             ^BDRBuggle:30: error: not found: value Y
	else if (litMessage==Y) {
                             ^BDRBuggle:34: error: not found: value X
	else if (litMessage==X) {
                             ^